# csvmonkey

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  callable_stream_cursor.hpp  csvcut.py  csvmonkey.cpp  csvmonkey.hpp  csvninja.cpp  csvninja.hpp  file_stream_cursor.hpp  fullsum.cpp  iterator_stream_cursor.hpp  parser_test.py  profiledata.csv  setup.py  test.cpp  test_csvmonkey.py
bench/: iteration.cpp
cpython/: csvmonkey.cpp  file_stream_cursor.hpp  iterator_stream_cursor.hpp
docs/: conf.py  cpp.rst  index.rst  python.rst
docs/templates/: github.html
include/: csvmonkey.hpp
scripts/: calc.py  compare.py  dequote.py  makesum.py
testdata/: profiledata.csv
tests/: .gitignore  CMakeLists.txt  _stringspanner_test.cpp  csvmonkey_test.py  csvmonkey_test_mmap.py  fallback_stringspanner_test.cpp  fullsum.cpp  parser_test.py  sse42_stringspanner_test.cpp
tests/bench/: iteration.cpp
tests/data/: anon-ram.csv.zstd  length-0.csv  length-1.csv  length-10.csv  length-11.csv  length-12.csv  length-13.csv  length-14.csv  length-15.csv  length-2.csv  length-3.csv  length-4.csv  length-5.csv  length-6.csv  length-7.csv  length-8.csv  length-9.csv
